[gd_scene load_steps=5 format=3 uid="uid://yext6ybpr2nn"]

[ext_resource type="Script" path="res://addons/Control3D/example/test_scene.gd" id="1_j027h"]
[ext_resource type="Script" path="res://addons/Control3D/example/Camera3d.gd" id="2_yk84g"]
[ext_resource type="Script" path="res://addons/Control3D/Nodes/Control3D.gd" id="5_n1htb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m3lny"]
margin = 0.001
radius = 0.465
height = 1.89

[node name="testScene" type="Node3D"]
script = ExtResource("1_j027h")

[node name="Control3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.24902, 0, 0.0861082)
script = ExtResource("5_n1htb")
shape = SubResource("CapsuleShape3D_m3lny")

[node name="Label3d" type="Label3D" parent="Control3D"]
transform = Transform3D(-0.00272266, 0, 0.999996, 0, 1, 0, -0.999996, 0, -0.00272266, 0, 1.788, 0)
text = "a"

[node name="Camera3d" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4, 0, 0)
current = true
script = ExtResource("2_yk84g")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Hold Left Mouse and drag to rotate camera."

[node name="CheckBox" type="CheckBox" parent="."]
offset_top = 32.0
offset_right = 211.0
offset_bottom = 63.0
button_pressed = true
text = "Show Control3D shapes"

[node name="Label2" type="Label" parent="."]
offset_left = 832.0
offset_right = 1152.0
offset_bottom = 128.0

[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
